remove pre-test recompile

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
 		"copy:ethers": "mkdir -p lib/types/ethers && cp -r src/types/ethers/*.d.ts lib/types/ethers",
 		"copy:truffle": "mkdir -p lib/types/truffle && cp -r src/types/truffle/*.d.ts lib/types/truffle",
 		"copy:web3": "mkdir -p lib/types/web3 && cp -r src/types/web3/*.d.ts lib/types/web3",
-		"pretest": "npm-run-all clean compile",
-		"prepublishOnly": "npm run test",
+		"prepack": "npm-run-all clean compile test",
 		"generate-types": "npm-run-all -p generate-types:truffle generate-types:web3 generate-types:ethers",
 		"generate-types:truffle": "typechain --target=truffle-v5 --out-dir=src/types/truffle 'src/abi/*.json'",
 		"generate-types:web3": "typechain --target=web3-v1 --out-dir=src/types/web3 'src/abi/*.json'",
